--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,17 @@
     <groupId>javaYT</groupId>
     <artifactId>javaYT</artifactId>
     <version>1.0-SNAPSHOT</version>
-<dependencies>
+    <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>8.0.8</version>
+        </dependency>
         <dependency>
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
